fix dialog box layout gap

--- a/src/app/core/dialog/addcontact/addcontact.component.css
+++ b/src/app/core/dialog/addcontact/addcontact.component.css
@@ -1,6 +1,7 @@
 .add-contact-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
 
 
